--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -6,23 +6,23 @@
 # blogger_url: # your blogger URL
 # bluesky_url: # your bluesky URL
 # dblp_url: # your DBLP profile url
-# discord_id: # your discord id (18-digit unique numerical identifier)
-email: you@example.com # your email address
+discord_id: escanor1391 # your discord id (18-digit unique numerical identifier)
+email: lionel.zovi@gmail.com # your email address
 # facebook_id: # your facebook id
 # flickr_id: # your flickr id
-# github_username: # your GitHub user name
+github_username: Escanor1986 # your GitHub user name
 # gitlab_username: # your GitLab user name
 # ieee_id: # your ieeexplore.ieee.org/author/id
-inspirehep_id: 1010907 # Inspire HEP author ID
+# inspirehep_id: # Inspire HEP author ID
 # instagram_id: # your instagram id
 # kaggle_id: # your kaggle id
 # keybase_username: # your keybase user name
 # lastfm_id: # your lastfm id
 # lattes_id: # your ID on Lattes (Brazilian Lattes CV)
 # leetcode_id: # your LeetCode id
-# linkedin_username: # your LinkedIn user name
+linkedin_username: lionelzovi # your LinkedIn user name
 # mastodon_username: # your mastodon instance+username in the format instance.tld/@username
-# medium_username: # your Medium username
+medium_username: lionelzovi # your Medium username
 # orcid_id: # your ORCID ID
 # osf_id: # your OSF ID
 # pinterest_id: # your pinterest id
@@ -30,11 +30,11 @@ inspirehep_id: 1010907 # Inspire HEP author ID
 # quora_username: # your Quora username
 # research_gate_profile: # your profile on ResearchGate
 rss_icon: true # set to true to show the RSS icon
-scholar_userid: qc6CJjYAAAAJ # your Google Scholar ID
+# scholar_userid: # your Google Scholar ID
 # scopus_id: # your profile on Scopus
 # semanticscholar_id: # your Semantic Scholar ID
 # spotify_id: # your spotify id
-# stackoverflow_id: # your stackoverflow id
+stackoverflow_id: 30368998 # your stackoverflow id
 # telegram_username: # your Telegram user name
 # unsplash_id: # your unsplash id
 # wechat_qr: # filename of your wechat qr-code saved as an image (e.g., wechat-qr.png if saved to assets/img/wechat-qr.png)
@@ -45,7 +45,18 @@ scholar_userid: qc6CJjYAAAAJ # your Google Scholar ID
 # x_username: # your X handle
 # youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 # zotero_username: # your zotero username
-custom_social: # can be any name here other than the ones already defined above
-  logo: https://www.alberteinstein.com/wp-content/uploads/2024/03/cropped-favicon-192x192.png # can be png, svg, jpg
-  title: Custom Social
-  url: https://www.alberteinstein.com/
+# Inscrivez vos propres blocs custom_* pour chaque plateforme
+custom_codewars:
+  logo: assets/img/codewars.svg        # mettez votre logo Codewars dans assets/img/
+  title: Codewars
+  url: https://www.codewars.com/users/Neo_Monkey_D_Luffy
+
+custom_coderbyte:
+  logo: assets/img/coderbyte.svg       # idem pour Coderbyte
+  title: Coderbyte
+  url: https://coderbyte.com/profile/Escanor1986
+
+custom_codingame:
+  logo: assets/img/codingame.svg       # idem pour CodinGame
+  title: CodinGame
+  url: https://www.codingame.com/profile/7f58b437a5ff631eca39d30090c739e14290705
