feat(i18n): translate content to English and update configuration
- Translate book reviews of "L'Alchimiste" and "JavaScript: The Definitive Guide" to English
- Translate Teaching page with educational resources and mentoring information
- Translate Technology Watch page detailing monitoring of web development trends
- Update configuration in _config.yml for multilingual support

This commit improves accessibility for English-speaking visitors while maintaining the professional presentation of the portfolio.

--- a/_config.yml
+++ b/_config.yml
@@ -94,8 +94,8 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # -----------------------------------------------------------------------------
 # Blog
 # -----------------------------------------------------------------------------
-blog_name: "Journal de développement"       # Nom affiché en haut de la page /blog/
-blog_description: "Réflexions, tutoriels et retours d’expérience sur le développement web et DevOps."  
+blog_name: "Development diary"       # Nom affiché en haut de la page /blog/
+blog_description: "Reflections, tutorials and feedback on web development and DevOps."  
 # –> Court résumé sous le titre du blog
 
 # URL des articles
